# primertrim

./: .gitignore  Dockerfile  README.md  primertrim_env.yml  pyproject.toml  setup.py
.github/workflows/: codecov.yml  linter.yml  release.yml  test.yml  tests.yml
primertrim/: align.py  command.py  dna.py  fastq.py  matcher.py  remove_primers.py  trimmable_reads.py
tests/: test_command.py  test_dna.py  test_dna_test.py  test_fastq.py  test_matcher.py  test_remove_primers.py  test_trimmable_reads.py
tests/data/: Sub10003.V1.sputum.redo_R2.fastq  example.fastq  no_primer_Sub10003.V1.sputum.redo_1mm_R1.fastq  no_primer_Sub10003.V1.sputum.redo_R1.fastq  no_primer_Sub10003.V1.sputum.redo_R2.fastq  trimmed_example.fastq
